# TrafficLightController

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yaml
inc/impl/app/: TrafficLightControllerApp.hpp
inc/impl/clock/: clock.hpp
inc/impl/example/: ExampleApp.h
inc/impl/simulator/: simulator.hpp
inc/interfaces/app/: IApp.hpp
inc/interfaces/clock/: IClock.hpp
inc/interfaces/example/: IExampleInterface.h
inc/interfaces/simulator/: ISimulator.hpp
src/: main.cpp
src/app/: TrafficLightControllerApp.cpp  TrafficLightControllerUtil.cpp
src/example/: ExampleApp.cpp
src/simulator/: simulator.cpp
test/: CMakeLists.txt  ExampleAppTest.cpp
test/tests/: TrafficLightControllerAppTest.cpp
